src/objects/Event__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <formula>DATEVALUE(Start_datetime__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finish_datetime__c</fullName>
        <label>Finish datetime</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_datetime__c</fullName>
        <label>Start datetime</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Teacher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Teacher</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Types of events occurring during the internship.</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Lesson</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Knowledge check</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Recreation</fullName>
                <color>#E27001</color>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Event</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <recordTypes>
        <fullName>Softheme_View</fullName>
        <active>true</active>
        <label>Softheme View</label>
    </recordTypes>
    <recordTypes>
        <fullName>Student_View</fullName>
        <active>true</active>
        <label>Student View</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Start_datetime__c &gt; Finish_datetime__c</errorConditionFormula>
        <errorDisplayField>Start_datetime__c</errorDisplayField>
        <errorMessage>Start event should be before the end !</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Type</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Type__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>You must select the type</errorMessage>
    </validationRules>
</CustomObject>